Add gpio chip support
billed to PSAR

--- a/arch/arm/configs/xilinx_zynq_defconfig
+++ b/arch/arm/configs/xilinx_zynq_defconfig
@@ -1469,7 +1469,7 @@ CONFIG_GPIO_PCF857X=y
 # SPI GPIO expanders
 #
 # CONFIG_GPIO_74X164 is not set
-# CONFIG_GPIO_MAX7301 is not set
+CONFIG_GPIO_MAX7301=y
 # CONFIG_GPIO_MC33880 is not set
 # CONFIG_GPIO_PISOSR is not set
 
